vlib/v/checker/tests/passing_expr_to_fn_expecting_voidptr.vv
fn myprintf(s string, x voidptr) {

}

myprintf('%02.02f\n', 1.1)
